--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0"
   }
 }
